--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,87 @@
-/* You can add global styles to this file, and also import other style files */
+html, body { height: 100%; }
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+header {
+  background-color: #7159c3;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+th, td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #7159c3;
+  color: #fff;
+}
+
+.delete-button {
+  background-color: #ff6961;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.add-button {
+  background-color: #f0f4f0;
+  color: #0b0b0b;
+  border: 2px solid #3616a9;
+  border-radius: 10px; 
+  padding: 10px;
+  cursor: pointer;
+  
+
+  
+}
+
+.circle {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+  }
+
+  .color-td {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .color-input-container {
+    display: flex;
+    align-items: center;
+}
+
+.color-input-container input[type=color] {
+    margin-right: 10px; /* Espaciado entre el input de color y el marcador de posición */
+}
+
+
+
+.right-align {
+  text-align: right;
+}
+
+
