--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- 
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tematicas</title>
-</head> -->
+</head>
 
 <body>
 
   <header>
-    <h1>Tematicas</h1>
+    <h1>Tématicas</h1>
   </header>
 
   <div class="container">
