--- a/src/styles.css
+++ b/src/styles.css
@@ -13,12 +13,28 @@ body {
   padding: 20px;
 }
 
-header {
+/*header {
   background-color: #7159c3;
   color: #fff;
-  text-align: center;
-  padding: 10px;
+  text-align: left;
+  padding: 5px;
+  
+  height:30px; /* Puedes ajustar este valor según sea necesario 
+}*/
+
+header {
+  grid-column: 1 / 13;
+  grid-row: 1;
+  text-align: left;
+  padding: 5px;
+  width: 350;
+  background-color: #7159c3;
+  color: #fff;
+  
+  
+
 }
+
 
 table {
   width: 100%;
@@ -57,6 +73,15 @@ th {
   
 }
 
+.add-button-guardar {
+  background-color: #1f1fb3;
+  color: #f0f4f0;
+  border: 2px solid #3616a9;
+  border-radius: 10px; 
+  padding: 10px;
+  cursor: pointer;
+}
+
 .circle {
     width: 30px;
     height: 30px;
@@ -83,5 +108,6 @@ th {
 .right-align {
   text-align: right;
 }
+
 
 
