--- a/src/app/pages/component/tematicas/tematicas.component.html
+++ b/src/app/pages/component/tematicas/tematicas.component.html
@@ -1,5 +1,9 @@
-<p>Aquí va una descripción</p>
-
+<table class="tableTex">
+  <tr>
+<h1>¡Bienvenido a tematicas!</h1></tr>
+<tr><p>Así, cuando hablamos de temática se está haciendo referencia al tema que aparece en una exposición,
+   en una presentación, en una charla o en un sinfín de situaciones diferentes.</p></tr>
+</table>
 <div class="right-align">
 
   <button class="add-button" (click)="abrirFormularioEnModal()"> + Agregar Nuevo Registro</button>
