--- a/src/app/pages/component/tematicas/formulario-tematicas/formulario-tematicas.component.css
+++ b/src/app/pages/component/tematicas/formulario-tematicas/formulario-tematicas.component.css
@@ -7,7 +7,7 @@
   
   .form-container h2 {
     color: #fff;
-    background-color: #47379f;
+    background-color:  #488ed9;
     padding: 10px;
     margin-bottom: 20px; 
   }
@@ -18,11 +18,12 @@
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0px 0px 10px 0px rgba(42, 16, 185, 0.071);
+    box-shadow: 0px 0px 10px 0px rgba(158, 155, 160, 0.071);
   }
   
   label {
-    margin-top: 10px;
+    color: #888383;
+    font-size: 16px;
   }
   
   .input-error {
@@ -52,9 +53,18 @@
   .color-input-container {
     display: flex;
     align-items: center;
+    
 }
 
 .color-input-container input[type=color] {
-    margin-right: 10px;
+    margin-right: 5px;
 }
+
+.colorTex {
+
+  color: #888383;
+}
+
+
+
   
