--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,12 @@ body {
 }
 
 .container {
-  max-width: 800px;
+  max-width: 1500px;
+  margin: 0 auto;
+  padding: 20px;
+}
+.headcon {
+  max-width: 770px;
   margin: 0 auto;
   padding: 20px;
 }
@@ -28,7 +33,7 @@ header {
   text-align: left;
   padding: 5px;
   width: 350;
-  background-color: #7159c3;
+  background-color: #867f9c;
   color: #fff;
   
   
@@ -40,6 +45,7 @@ table {
   width: 100%;
   border-collapse: collapse;
   margin-top: 20px;
+  color: #4a4545;
 }
 
 th, td {
@@ -49,7 +55,7 @@ th, td {
 }
 
 th {
-  background-color: #7159c3;
+  background-color:  #488ed9;
   color: #fff;
 }
 
@@ -63,8 +69,8 @@ th {
 
 .add-button {
   background-color: #f0f4f0;
-  color: #0b0b0b;
-  border: 2px solid #3616a9;
+  color: #4a4545;
+  border: 2px solid  #488ed9;
   border-radius: 10px; 
   padding: 10px;
   cursor: pointer;
@@ -74,9 +80,9 @@ th {
 }
 
 .add-button-guardar {
-  background-color: #1f1fb3;
+  background-color:  #87d2e7;
   color: #f0f4f0;
-  border: 2px solid #3616a9;
+  border: 2px solid   #488ed9;
   border-radius: 10px; 
   padding: 10px;
   cursor: pointer;
@@ -107,6 +113,91 @@ th {
 
 .right-align {
   text-align: right;
+}
+
+
+/*nuevo*/
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+header {
+  background-color:  #488ed9;
+  color: #fff;
+  padding: 64px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 24px;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+nav li {
+  margin-right: 20px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+}
+
+.wrapper {
+  display: flex;
+  flex: 1;
+  
+}
+
+.sidebar {
+  width: 200px;
+  background-color:  #488ed9;
+  color: #fff;
+  padding: 20px;
+  
+}
+
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.sidebar li {
+  margin-bottom: 10px;
+}
+
+.sidebar a {
+  text-decoration: none;
+  color: #ccc;
+  font-weight: bold;
+}
+
+.main-content {
+  flex: 1;
+  padding: 80px;
+  width: 10%;
+}
+
+/*table personalizada*/
+.tableTex {
+  width: 100%;
+  color: #4a4545;
+  border-collapse: collapse;
+  background-color: #ebf0f1; /* Color de fondo de la tabla */
+}
+
+th, td {
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+p {
+  margin: 0; /* Elimina el margen predeterminado del párrafo */
 }
 
 
