--- a/src/app/pages/component/tematicas/formulario-tematicas/formulario-tematicas.component.html
+++ b/src/app/pages/component/tematicas/formulario-tematicas/formulario-tematicas.component.html
@@ -17,7 +17,7 @@
       <input type="color" id="color2" formControlName="color2" required>
     </div>
     <div class="form-footer">
-      <button class="add-button" type="button" (click)="tematicaForm.reset()">Cancelar</button>
+      <button class="add-button" type="button" (click)="cancelarForm()" >Cancelar</button>
       <button class="add-button-guardar" type="submit">Guardar</button>
       <script src="script.js"></script>
     </div>
